Fixes alignment of buttons on modal by styling the btn class instead of the button element. Checked other uses of buttons on the backpack, and no visible problems to this approach since the btn class is already used by Bootstrap.

--- a/static/less/backpack.less
+++ b/static/less/backpack.less
@@ -238,7 +238,7 @@ table.information {
   margin: auto;
 }
 
-.information button {
+.information .btn {
   margin-top: 16px;
 }
 
